zarf-101/Kubernetes_Objects/Ingress/miniproject_solution/objects/ing-rules-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drinks-haproxy
  annotations:
    haproxy.org/path-rewrite: "/"
spec:
  ingressClassName: haproxy
  rules:
  - host: localhost
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-coffee-deployment
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-tea-deployment
            port:
              number: 80
