zarf-101/Kubernetes_Objects/Ingress/miniproject_solution/objects/ing-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drinks-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-coffee-deployment
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-tea-deployment
            port:
              number: 80
